# TorchSDF

./: MANIFEST.in  pyproject.toml  setup.py
torchsdf/: sdf.py
torchsdf/csrc/: unbatched_triangle_distance_cuda.cu  utils.h
